# sensortower-mcp

./: .dockerignore  .env.example  .gitignore  DIAGNOSTIC_PLAN.md  Dockerfile  Dockerfile.proxy  README-pypi.md  README.md  REFACTORING_GUIDE.md  cursor-mcp-config.json  docker-compose.proxy.yml  docker-compose.yml  docstring_audit_report.md  example.py  headers.txt  main.py  nginx-proxy.conf  nginx.conf  proxy_http_server.py  proxy_server.py  pyproject.toml  requirements.txt  response.txt  run_diagnostics.py  sensortower-mcp-bug-report.md  sensortower_mcp_tool_test_report.md  test_search_entities_fix.py  test_search_entities_mcp.py
archive/: main.py  pyproject.toml
docs/: fastmcp-uniform-compliance.md  testing-roadmap.md  testing.md
manual/: search_entities_fix.py  search_entities_mcp.py
src/sensortower_mcp/: __init__.py  base.py  config.py  documentation.py  prompts.py  server.py  tool_examples.py
src/sensortower_mcp/tools/: __init__.py  app_analysis.py  market_analysis.py  search_discovery.py  store_marketing.py  utilities.py  your_metrics.py
swaggerdocs/: app_analysis.yml  custom_fields_metadata.yml  market_analysis.yml  store_marketing.yml  your_metrics.yml
tests/: README.md  README_TESTING.md  TESTING.md  __init__.py  comprehensive_validation.py  conftest.py  diagnostic_tests.py  investigate_404_errors.py  investigate_422_errors.py  jsonrpc.py  run_bug_fix_validation.py  test_all.py  test_app_analysis_tools.py  test_comprehensive.py  test_corrected_parameters.py  test_deployment.py  test_documentation_integrity.py  test_final_usage_fix.py  test_functional.py  test_live_api_tools.py  test_load.py  test_local_mcp.py  test_local_vs_published.py  test_manual.py  test_mcp_tools.py  test_new_endpoints.py  test_publisher_fix.py  test_result_normalization.py  test_security.py  test_tool_manifest.py  test_tools_metadata.py  test_usage_discovery.py  tool_live_examples.py  tool_manifest.py  tool_registry.py  validate_advertising_fixes.py  validate_usage_fixes.py
