[project]
name = "sensortower-mcp"
version = "1.0.4"
description = "Model Context Protocol server for Sensor Tower APIs using FastMCP"
readme = "README-pypi.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.25.0",
    "uvicorn>=0.30.0",
    "uvloop>=0.19.0; sys_platform != \"win32\"",
]

[project.scripts]
sensortower-mcp = "main:cli"

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
]
test = [
    "httpx>=0.25.0",
    "aiohttp>=3.10.0",
    "safety>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "swaggerdocs/**/*",
    "README-pypi.md",
]
exclude = [
    "tests/",
    "test_*.py",
    "*.log",
    ".env*",
    "__pycache__/",
]
