[project]
name = "sensortower-mcp"
version = "1.1.4"
description = "Model Context Protocol server for Sensor Tower APIs using FastMCP"
readme = "README-pypi.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sensortower-mcp = "main:cli"

[project.optional-dependencies]
test = [
    "aiohttp>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "swaggerdocs/**/*",
    "README-pypi.md",
]
exclude = [
    "tests/",
    "test_*.py",
    "*.log",
    ".env*",
    "__pycache__/",
]
